# scraper

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  README.md  main.cpp  old_main.cpp
lib/: CMakeLists.txt  git_clone.sh
lib/scraper/: CMakeLists.txt  scraper.cpp  scraper.h
lib/scraper/tests/: RegexSearch.txt  main.cpp  test  test_run.sh
tests/: CMakeLists.txt  conf.txt  main.cpp  test  test_run.sh
